Fixed spacing for artifact info content in html document

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -288,6 +288,7 @@ small {
 .artifact-info-content hr {
     border: 3px solid rgb(120, 88, 56);
     width: 60px;
+    margin-bottom: 0.5rem;
 }
 
 /*Related content section*/
@@ -508,6 +509,13 @@ a {
 
     small {
         max-width: 93%;
+        margin-bottom: 1rem;
+    }
+
+
+    .artifact-info-content h2 hr {
+        padding: 0;
+        margin: 0;
         margin-bottom: 1rem;
     }
 
